# stock

./: .gitignore  README.md  index.html  market-breadth.js  package-lock.json  package.json  requirements.txt  vite.config.ts  watchlist-manager.js  watchlist_codes.txt
docs/adr/: 0001-adopt-tauri2-react-rust-sqlite.md
docs/chouma/: 2026-03-24-chenhao-chip-study.md  chenhao_chip_extract.txt  邢不行—筹码分布相关代码.py
docs/context/: 2026-03-18-project-handover.md
docs/cycles/: watchlist-cycle-report.json  watchlist-cycle-summary.md
docs/plans/: 2026-03-12-tauri-stock-watchlist-design.md
scripts/: build-desktop-exe.cmd  build-desktop-exe.ps1  fetch_akshare_watchlist.py  generate_watchlist_cycle_report.py  refresh_market_breadth_snapshot.py  windows-tauri-env.cmd
src/: App.tsx  styles.css  tauriBridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.skip-frontend.json
src-tauri/src/: lib.rs  main.rs
src/data/: akshare-snapshot.json  cycle.ts  mock.ts  watchlist.ts
