[package]
name = "stock-watch-desktop"
version = "0.1.0"
description = "A cross-platform stock watchlist desktop app"
authors = ["Codex"]
edition = "2021"

[lib]
name = "stock_watch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
